@@ -1,10 +1,10 @@
 #textdomain wesnoth-Ageless_Era
 
-#ifhave ~add-ons/Ageless_Era/ageless_4_19.preprocessed.cfg
+#ifhave ~add-ons/Ageless_Era/ageless_4_20.preprocessed.cfg
 # Using this makes loading ageless much much faster.
 # If something fails, or you want to have prefered editing form, delete that file
 #ifdef MULTIPLAYER
-{~add-ons/Ageless_Era/ageless_4_19.preprocessed.cfg}
+{~add-ons/Ageless_Era/ageless_4_20.preprocessed.cfg}
 #endif
 #else
 
@@ -73,9 +73,9 @@
 #enddef
 
 #define AE_VERSION_NUMBER
-4.19#enddef
+4.20#enddef
 #define AE_VERSION_STRING
-4_19#enddef
+4_20#enddef
 
 {./data/core_override_start.cfg}
 {~add-ons/Ageless_Era/anim_macros/}
