@@ -72,19 +72,19 @@ AE_use_beta_features=wesnoth.get_variable("AE_use_beta_features")
                     [/fire_event]
                 [/command]
             [/option]
-			[option]
-				message="Inspect hidden stuff"
-				[show_if]
-					[AE_is_observer]
-					[/AE_is_observer]
-					[or]
-						[Ravana]
-						[/Ravana]
-					[/or]
-				[/show_if]
-				[command]
-				[/command]
-			[/option]
+			# [option]
+				# message="Inspect hidden stuff"
+				# [show_if]
+					# [AE_is_observer]
+					# [/AE_is_observer]
+					# [or]
+						# [Ravana]
+						# [/Ravana]
+					# [/or]
+				# [/show_if]
+				# [command]
+				# [/command]
+			# [/option]
             [option]
                 message="Inspect some mod settings"
                 # Showing it anyways, there is nothing really private here, it is just useless for most people
@@ -132,15 +132,6 @@ Rav_XP_hp_cost: $Rav_XP_hp_cost
 Rav_XP_move_cost: $Rav_XP_move_cost
 Rav_XP_damage_cost: $Rav_XP_damage_cost
 Rav_XP_strike_cost: $Rav_XP_strike_cost
-AE_debug_versions_side_1: $AE_debug_versions_side_1
-AE_debug_versions_side_2: $AE_debug_versions_side_2
-AE_debug_versions_side_3: $AE_debug_versions_side_3
-AE_debug_versions_side_4: $AE_debug_versions_side_4
-AE_debug_versions_side_5: $AE_debug_versions_side_5
-AE_debug_versions_side_6: $AE_debug_versions_side_6
-AE_debug_versions_side_7: $AE_debug_versions_side_7
-AE_debug_versions_side_8: $AE_debug_versions_side_8
-AE_debug_versions_side_9: $AE_debug_versions_side_9
 "
                     [/message]
                 [/command]
