@@ -67,20 +67,20 @@
             image="units/darklander/canoe.png"
         [/frame]
     [/movement_anim]
-    [defense]
+    [defend]
         [frame]
             image="units/darklander/canoe-land.png"
             duration=50
         [/frame]
-    [/defense]
-    [defense]
+    [/defend]
+    [defend]
         start_time=0
         terrain_type={DRAKE_UNWALKABLE_TERRAINS}
         [frame]
             duration=100
             image="units/darklander/canoe.png"
         [/frame]
-    [/defense]
+    [/defend]
 
     #death    #boat    [death]        terrain_type=W*	,S*        [frame]            begin=0            end=100            image="units/darklander/canoe.png"        [/frame]        [frame]            begin=100            end=200            image="units/darklander/canoe.png"        [/frame]        [frame]            begin=200            end=300            image="units/darklander/canoe.png"        [/frame]        [frame]            begin=300            end=400            image="units/darklander/canoe.png"        [/frame]        [frame]            begin=400            end=700            image="units/darklander/canoe.png"        [/frame]    [/death]    #no boat    [death]        terrain_type=!,W*	,S*        [frame]            begin=0            end=100            image="units/darklander/canoe-land.png"        [/frame]        [frame]            begin=100            end=250            image="units/darklander/canoe-land.png"        [/frame]        [frame]            begin=250            end=400            image="units/darklander/canoe-land.png"        [/frame]        [frame]            begin=400            end=700            image="units/darklander/canoe-land.png"        [/frame]    [/death]
     #attack
