@@ -15,7 +15,7 @@
 
     cost=24
     usage=archer
-    description={AE_EFM_UNIT_NOTICE}+"Cannoes are swift vessels but the lack of stability makes them chancy to fight in. To correct this two of them can be linked together without slowing it down."
+    description={AE_EFM_UNIT_NOTICE}+"Canoes are swift vessels but the lack of stability makes them chancy to fight in. To correct this two of them can be linked together without slowing it down."
 
     [attack]
         name=spear
